# mojivs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RELEASING.md  fontRender.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: generate_images.py
examples/: basic.py
lib/: createTools.py  isIVS.py
scripts/: README.md  update_ivd.py
src/mojivs/: __init__.py  __main__.py  cli.py  colors.py  errors.py  export.py  font.py  ivs.py  render.py  render_builtin.py  render_ft.py  shaping.py
src/mojivs/data/: __init__.py  ivd.txt
tests/: conftest.py  test_cli.py  test_export.py  test_font.py  test_ivs.py  test_render.py  test_render_ft.py  test_shape.py
