[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mojivs"
version = "0.2.0"
description = "IVS-aware Japanese text rendering — render 異体字 (variation sequences) to images."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "mori" }]
keywords = ["font", "japanese", "ivs", "ideographic-variation-sequence", "cjk", "rendering", "adobe-japan1"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Fonts",
    "Natural Language :: Japanese",
]
dependencies = [
    "fonttools>=4.0",
    "pillow>=9.0",
    "pycairo>=1.20",
    "numpy>=1.21",
]

[project.optional-dependencies]
pdf = ["reportlab>=4.0"]
dev = ["pytest>=7.0", "reportlab>=4.0"]

[project.urls]
Homepage = "https://github.com/daiki-moritake/mojivs"
Repository = "https://github.com/daiki-moritake/mojivs"
Issues = "https://github.com/daiki-moritake/mojivs/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mojivs"]

[tool.hatch.build.targets.sdist]
include = ["src/mojivs", "tests", "examples", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
