[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mojivs"
version = "0.3.0"
description = "IVS-aware Japanese text rendering — render 異体字 (variation sequences) to images."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "mori" }]
keywords = ["font", "japanese", "ivs", "ideographic-variation-sequence", "cjk", "rendering", "adobe-japan1"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Fonts",
    "Natural Language :: Japanese",
]
dependencies = [
    "fonttools>=4.0",
    "pillow>=9.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
# Rasterizer backends — install at least one. ``cairo`` powers the default
# backend (and all stroked text); ``freetype`` is the faster, cairo-free path.
cairo = ["pycairo>=1.20"]
freetype = ["freetype-py>=2.3"]
pdf = ["reportlab>=4.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pycairo>=1.20",
    "freetype-py>=2.3",
    "reportlab>=4.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[project.urls]
Homepage = "https://github.com/daiki-moritake/mojivs"
Repository = "https://github.com/daiki-moritake/mojivs"
Issues = "https://github.com/daiki-moritake/mojivs/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mojivs"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mojivs",
    "tests",
    "examples",
    "scripts",
    "README.md",
    "README.en.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "RELEASING.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["mojivs"]
branch = true

[tool.coverage.report]
show_missing = true
# render_ft/export guard optional backends behind ImportError; those defensive
# branches are exercised only when a dependency is absent.
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# pyflakes (F) catches real bugs (unused/undefined names); pycodestyle (E/W),
# isort (I), pyupgrade (UP) and bugbear (B) keep the code consistent.
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pyright]
# The runtime dependencies (pycairo, reportlab) and parts of fontTools ship no
# type stubs. "basic" mode keeps useful checks (undefined names, bad calls)
# without flooding the editor with "stub not found" / "unknown type" noise.
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
