[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mojivs"
version = "0.4.0"
description = "IVS-aware Japanese text rendering — render 異体字 (variation sequences) to images."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "mori" }]
keywords = ["font", "japanese", "ivs", "ideographic-variation-sequence", "cjk", "rendering", "adobe-japan1"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Fonts",
    "Natural Language :: Japanese",
]
dependencies = [
    "fonttools>=4.0",
    "pillow>=9.0",
]

[project.optional-dependencies]
# The default 'builtin' rasterizer needs nothing beyond the core deps above.
# These extras are optional accelerators: ``cairo`` is faster and adds stroked
# text; ``freetype`` is the fastest fill path (and pulls numpy for compositing).
cairo = ["pycairo>=1.20"]
freetype = ["freetype-py>=2.3", "numpy>=1.21"]
pdf = ["reportlab>=4.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pycairo>=1.20",
    "freetype-py>=2.3",
    "numpy>=1.21",
    "reportlab>=4.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[project.scripts]
mojivs = "mojivs.cli:main"

[project.urls]
Homepage = "https://github.com/daiki-moritake/mojivs"
Repository = "https://github.com/daiki-moritake/mojivs"
Issues = "https://github.com/daiki-moritake/mojivs/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mojivs"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mojivs",
    "tests",
    "examples",
    "scripts",
    "README.md",
    "README.en.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "RELEASING.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["mojivs"]
branch = true

[tool.coverage.report]
show_missing = true
# render_ft/export guard optional backends behind ImportError; those defensive
# branches are exercised only when a dependency is absent.
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# pyflakes (F) catches real bugs (unused/undefined names); pycodestyle (E/W),
# isort (I), pyupgrade (UP) and bugbear (B) keep the code consistent.
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pyright]
# The runtime dependencies (pycairo, reportlab) and parts of fontTools ship no
# type stubs. "basic" mode keeps useful checks (undefined names, bad calls)
# without flooding the editor with "stub not found" / "unknown type" noise.
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.semantic_release]
# Automated releases (see .github/workflows/publish.yml and RELEASING.md). On a
# push to main, python-semantic-release parses the Conventional Commits since the
# last tag, computes the next version, bumps it in the files below, updates the
# changelog, tags, and creates a GitHub Release — which the same workflow then
# publishes to PyPI.
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/mojivs/__init__.py:__version__"]
tag_format = "v{version}"
build_command = "python -m build"
commit_message = "chore(release): {version} [skip ci]"
# Stay on 0.x semantics: a feat bumps the minor (0.3.0 -> 0.4.0) and a breaking
# change also stays within 0.x rather than jumping to 1.0.0 until we opt in.
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
# Insert each new release above the existing history at the marker in
# CHANGELOG.md, preserving the hand-written entries already there.
mode = "update"
insertion_flag = "<!-- version list -->"
